[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemies/slime_blue.png" type="Texture" id=1]
[ext_resource path="res://scripts/slime.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 19.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34, 21 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12.5 )
shape = SubResource( 2 )

[node name="GroundRayCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 4

[node name="Area2D" type="Area2D" parent="." groups=["enemy", "hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 11 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
